# Small-project

./: .clang-format  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  README.txt
docs/diagrams/: example_class_diagram.puml
docs/uml/: ObjectDomain.puml
include/: Configuration.h  Core.h  DataLayer.h  DebugRenderer.h  Entity.h  IRenderable.h  ITickable.h  InputLayer.h  Location.h  LocationLayer.h  Logger.h  NamedLayer.h  PhysicalEntity.h  PhysicsLayer.h  RendererLayer.h  Resource.h  RigidBody.h  Screen.h  TestShip.h  UniqueIdentifier.h  World.h
include/common/: Defs.h  Dev.h  FIFOList.h  FILOList.h  IControllable.h  IEnableable.h  IEvent.h  IEventListener.h  INamedObject.h  IRenderable.h  ISerializable.h  ITickable.h  IsDerivedFrom.h
include/core/: ActiveSceneLayer.h  Core.h  DataLayer.h  Entity.h  EventDispatcher.h  EventTypes.h  GameLayer.h  GameTimerLayer.h  InputLayer.h  LocationLayer.h  ObjectDatabase.h  PhysicsLayer.h  RendererLayer.h  StringEventListener.h
include/core/initializers/: AllegroManager.h  CoreManager.h  FrameHandler.h
include/core/inputProfiles/: InputProfile.h
include/game/: GObject.h  Logger.h  NamedLayer.h  PhysicalEntity.h  RigidBody.h  Scene.h  SimpleDevScene.h  SimpleScene.h  TestShip.h
include/game/common/: CommonTypes.h  ISelectable.h  Tree.h  UniqueString.h
include/game/demo/: DevScene.h
include/game/faction/: Faction.h
include/game/simulation/: Economy.h
include/game/squad/: Squad.h  SquadCommand.h  SquadCommander.h  SquadElement.h
include/input/: InputController.h  InputLayer.h  Mouse.h  UIAction.h  UIInputController.h
include/math/: Random.h  Rect.h  Vector2D.h
include/render/: CoreRenderer.h  DebugRenderer.h  Resource.h  UiRenderer.h
include/render/operations/: CompositeRenderCommand.h  DrawArrowOperation.h  DrawBitmapOperation.h  DrawBoundingBoxCommand.h  DrawCrossOperation.h  DrawRectOperation.h  DrawTextCommand.h  RenderCommand.h
include/render/operations/debug/: DrawArrowOperation.h  DrawRectAlpha.h  DrawRectOperation.h
include/system/: Configuration.h  DebugConsole.h  File.h  Screen.h
include/ui/: Button.h  Font.h  Panel.h  UIElement.h  UIRectangle.h
include/ui/Buttons/Debug/: RestTestShip.h
include/util/: IndexedVector.h  Timers.h
res/: config.ini
src/: UniqueIdentifier.cpp  main.cpp  newMain.cpp
src/common/: INamedObject.cpp  IRenderable.cpp
src/core/: GameTimerLayer.cpp  InputLayer.cpp  RendererLayer.cpp
src/core/initializers/: AllegroManager.cpp  CoreManager.cpp
src/game/: GObject.cpp  NamedLayer.cpp  TestShip.cpp
src/game/demo/: DevScene.cpp
src/render/: CoreRenderer.cpp  DebugRenderer.cpp  UiRenderer.cpp
src/ui/: Button.cpp  Panel.cpp
tools/: callgrind_gdb.sh  massif_gdb.sh  valgrind_gdb.sh
ut/: CMakeLists.txt  CMakeLists.txt.disabled  playground.cpp  playground.h  test_box2d.cpp  test_conf.cpp  test_main.cpp
ut/game/common/: test_game_common.cpp
